[tool.poetry]
name = "twitter"
version = "0.1.0"
description = ""
authors = ["Aleksandr Bobrov <mister-al@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.5.1"
moviepy = "^1.0.3"
seaborn = "^0.11.2"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
